--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -19,6 +19,7 @@
     left: 0;
     z-index: 1001;
     overflow: hidden;
+    box-shadow: 1px 0 3px rgba(0,21,41,.35);
 
     // reset element-ui css
     .horizontal-collapse-transition {
@@ -72,6 +73,7 @@
     .submenu-title-noDropdown,
     .el-submenu__title {
       &:hover {
+        color: $menuHoverText !important;
         background-color: $menuHover !important;
       }
     }
@@ -86,6 +88,7 @@
       background-color: $subMenuBg !important;
 
       &:hover {
+        color: $subMenuHoverText !important;
         background-color: $subMenuHover !important;
       }
     }
